@@ -157,7 +157,7 @@ A: The following table lists the Linux kernel versions against which the
 |    2.3.x     | 2.6.32 to 3.14
 |    2.4.x     | 2.6.32 to 4.0
 |    2.5.x     | 2.6.32 to 4.3
-|    2.6.x     | 3.10 to 4.3
+|    2.6.x     | 3.10 to 4.6
 
    Open vSwitch userspace should also work with the Linux kernel module
    built into Linux 3.3 and later.
